@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 ------------------------------------------------- 
 
+- Add support for dashes on polygon hatches
+
 - Union layer 3 new processing options added (#3900)
 
 - Changed msRemoveStyle to allow removing all styles (#3895)
